# Strife

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  bochs.txt  bochs_HDD.txt  build  build.sh  clean  clean.sh  debug  debug.sh  debugHDD  install.sh  limine.cfg  linker.ld  megaCompile.py  run  run.sh  runHDD
.github/: make.sh
.github/workflows/: make.yaml
bochs_config/: bochs.txt
extra/: Makefile  identify.txt  shell.txt  splash.txt
extra/font/lat1/: README.txt  lat1.raw
include/: GDT.h  IDT.h  IRQ.h  asm.h  boot.h  keyboard.h  keyboard_map.h  stdio.h  string.h  tty.h
include/common/: colors.h  types.h
include/kernel/: GDT.h  IRQ.h  asm.h  paging.h
include/kernel/drivers/: keyboard.h  tty.h
include/libc/: math.h  stdio.h  stdlib.h  string.h
projects/: .gitignore  Makefile  libs.txt  programs.txt  projects.txt
scripts/: TODO.sh  printf.sh
src/: boot.asm  boot.s  listTODOs.sh  removeme.sh
src/JBoot/: .gitignore  INFO.txt  README.md  bochs.txt  jboot.asm  nasmPP.py  stage2.asm  test.sh
src/JBoot/CD/: JBoot.asm  stage1.asm  stage2.asm
src/JBoot/HDD/: stage1.asm  stage2.asm
src/common/: elf.h  types.h  types.hpp
src/extra/: Makefile
src/extra/MSS/: MSS.asm  MSS.cpp  Makefile
src/kernel/: GDT.c  IDT.c  IDT.h  Makefile  PIC.c  asm.h  asm.hpp  asm_GDT.s  asm_IDT.s  boot.h  boot.hpp  expensiveNOP.asm  int32.asm  kernel.c  kernel.cpp  kernel_panic.c  kernel_panic.h  keyboard.c  liballoc.c  paging.c  splash.c  splash.h  tty.c
src/kernel/GDT/: GDT.c  GDT.cpp  GDT.h  GDT.hpp
src/kernel/IDT/: IDT.c  IDT.cpp  IDT.h  IDT.hpp  asm_IDT.asm
src/kernel/MPI/: MPI.hpp  channels.cpp  messages.cpp  public.cpp
src/kernel/PCI/: PCI.c  PCI.cpp  PCI.h  PCI.hpp
src/kernel/PIC/: PIC.c  PIC.h
src/kernel/TSS/: TSS.cpp  TSS.h  TSS.hpp
src/kernel/V86/: V86.cpp  V86.h  V86.hpp
src/kernel/drivers/: keyboard.c  tty.c
src/kernel/drivers/ATA_PIO/: ATA_PIO.c  ATA_PIO.h
src/kernel/drivers/PCI/: PCI.cpp  PCI.hpp
src/kernel/drivers/PIC/: PIC.c  PIC.cpp  PIC.h  PIC.hpp
src/kernel/drivers/TTY/: TTY.c  TTY.h
src/kernel/drivers/VESA/: VESA.c  VESA.cpp  VESA.h  VESA.hpp
src/kernel/drivers/VGA/: VGA.c  VGA.h
src/kernel/drivers/clock/: IDT_clock.asm  clock.c  clock.cpp  clock.h  clock.hpp
src/kernel/drivers/keyboard/: IDT_keyboard.asm  IDT_keyboard.s  kb_layout.h  kb_layout.hpp  keyboard.c  keyboard.cpp  keyboard.h  keyboard.hpp  keyboard_mapping.h
src/kernel/drivers/storage/: FSRawChunk.hpp
src/kernel/drivers/term/: font.c  font.h  term.c  term.cpp  term.h  term.hpp
src/kernel/install/: install.c  install.cpp  install.h  install.hpp
src/kernel/kernel_panic/: kernel_panic.c  kernel_panic.cpp  kernel_panic.hpp
src/kernel/klibc/: stdio  stdlib.cpp  stdlib.hpp  string  utility
src/kernel/klibc/math/: pow.cpp
src/kernel/klibc/stdio_/: printf.cpp  readLine.cpp  stdio.hpp
src/kernel/klibc/stdlib/: alloc.cpp  (+6 more)
src/kernel/loader/: loader.cpp  loader.hpp
src/kernel/memutils/: memutils.c  memutils.cpp  memutils.h  memutils.hpp
src/kernel/mounts/: mounts.cpp  mounts.hpp
src/kernel/paging/: asm_paging.asm  asm_paging.s  paging.c  paging.cpp  paging.h  paging.hpp
src/kernel/syscalls/: IDT_syscall.asm  README.md  sanitize.cpp  syscalls.c  syscalls.cpp  syscalls.h  syscalls.hpp
src/kernel/tasks/: task.cpp  task.hpp
src/kernel/usermode/: usermode.asm  usermode.h  usermode.hpp
src/klibc/: Makefile  stdio  stdio.h  stdlib.cpp  stdlib.h  stdlib.hpp  string  utility
src/klibc/STL/: bitmap  dlist  iterable_stack  list  pair  queue  stack  test.h  test.hpp  vector  window
src/klibc/math/: pow.c  pow.cpp
src/klibc/stdio/: getch.c  getch.cpp  printf.c  printf.cpp  readLine.c  readLine.cpp  writec.cpp
src/klibc/stdio_/: getch.cpp  printf.cpp  readLine.cpp  stdio.hpp  writec.cpp
src/klibc/stdlib/: atoi.cpp  htoa.c  htoa.cpp  htoi.cpp  itoa.c  itoa.cpp  liballoc.c  liballoc.cpp  liballoc.h
src/klibc/string/: strcat.c  strcati.cpp  strcmp.cpp  strcpy.cpp  strdisp.c  strdup.c  strdup.cpp  strinv.c  strlen.c
src/klibc/string_/: string.h  string_imp.cpp
src/klibc/utility_/: utility.hpp
src/libc/: stdio.h  stdlib.h
src/libc/math/: pow.c
src/libc/stdio/: getch.c  printf.c  readLine.c  writec.c  writes.c
src/libc/stdlib/: atoi.c  htoa.c  htoi.c  itoa.c  liballoc.c
src/libc/string/: strcat.c  strcati.c  strcmp.c  strcpy.c  strdisp.c  strdup.c  strinv.c  strlen.c
(+119 files in other folders)
